--- a/listFiles/package.json
+++ b/listFiles/package.json
@@ -8,6 +8,7 @@
     "email": ""
   },
   "dependencies": {
-    "musicmetadata": "^0.3.3"
+    "musicmetadata": "^0.3.3",
+    "rx": "~2.2.13"
   }
 }
